# fastapi-docker-celery-exemplo

./: .dockerignore  .env_example  .flake8  .gitignore  .isort.cfg  .secrets_example.toml  Dockerfile  Dockerfile.localhost  Makefile  README.md  consumer.py  consumer_dummy.py  docker-compose.yml  init_config.sh  mkdocs.yml  pyproject.toml  requirements.txt  settings.local.example.toml  settings.toml  unpacking_example.py
app/: config.py  log_config.py  logging_config.json  main.py
app/core/: operacoes_matematicas.py
app/routes/: tarefa1.py  tarefa2.py
app/schemas/: schemas.py
app/src/: custom_logging.py  sendmail.py  telegram_msg.py  uteis.py
docker_localhost/01-traefik/: 01-docker-compose-traefik-local.yml
docker_localhost/02-redis/: 02-docker-compose-redis.yml
docker_localhost/03-backend/: 03-docker-compose-fastapi-local.yml
docker_localhost/03-producer/: 03-docker-compose-producer.yml
docker_localhost/04-flower/: 04-docker-compose-flower.yml
docker_localhost/06-frontend/: 06-docker-compose-frontend.yml
docs/: index.md
docs/MKDOCS/: MKDOCS.md
frontend/html/: index.html
frontend/html/css/: style.css
